# hermes-security-harness

./: .gitignore  LICENSE  README.md  poc-health.json  pyproject.toml  target-finese-complete.yaml  target-finese.yaml
contracts/: README.md  auth-scan-v1.json  dependency-audit-v1.json  finding-v1.json  grader-v1.json  http-poc-v1.json  injection-scan-v1.json  job-v1.json  patch-candidate-v1.json  poc-replay-v1.json  rate-limit-scan-v1.json  source-inventory-v1.json  static-agent-findings-v1.json  static-findings-v1.json
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  ROADMAP.md  SAFETY.md
examples/: web-target.example.yaml  web-target.finease.local.yaml  web-target.local.yaml
security_harness/: __init__.py  _http_client.py  advanced_payloads.py  artifacts.py  auth_client.py  auth_scan.py  chain_gate.py  chain_reasoning.py  chains.py  cli.py  cli_scan.py  contracts.py  csrf_scan.py  dependency_audit.py  engagement.py  findings.py  http_smoke.py  http_verb_scan.py  idor_scan.py  injection_scanner.py  intake.py  jobs.py  jwt_scan.py  lifecycle.py  pipeline.py  poc_replay.py  rate_limit.py  recon.py  report.py  sandbox.py  scan_handler.py  static_scan.py  stored_xss_scan.py  tls_scan.py  web_target.py  wstg_base.py
tests/: helpers.py  test_artifacts.py  test_auth_scan.py  test_chain_correlation.py  test_cli.py  test_contract_validation.py  test_contracts.py  test_csrf_scan.py  test_dependency_audit.py  test_engagement.py  test_findings.py  test_hermes_cli_runner.py  test_http_smoke.py  test_http_verb_scan.py  test_idor_scan.py  test_injection_abstraction.py  (+19 more)
(+12 files in other folders)
