[project]
name = "hermes-security-harness"
version = "0.1.0"
description = "Hermes-native defensive security harness for authorized source-backed web targets"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
security-harness = "security_harness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["security_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
